# ECE530

./: .gitignore  README.md
ece530/: pyproject.toml
ece530/ece530/hw1/: __main__.py
ece530/ece530/hw3/: __main__.py
ece530/ece530/hw4/: applyNewtonMethod.m  modifyHessian.m
ece530/ece530/hw5/: forward_euler_stability.m  integration_0.1.eps  integration_0.45.eps  newton_raphson.m  run_ODE.m
ece530/ece530/hw7/: flop_estimate.py
ece530/ece530/hw8/: problem1.py  problem2.ipynb  problem2.py
ece530/ece530/hw9/: arnoldi.py
ece530/ece530/numerical_methods/: __init__.py
latex/hw1/: hw1.tex
latex/hw2/: PowerFlowNR.m  computeJacobian_HW.m  hw2.tex
latex/hw3/: hw2.tex  hw3.tex
latex/hw3/plots/: script_output.txt
latex/hw4/: hw4.tex
latex/hw5/: forward_euler.eps  forward_euler.epsc  hw5.bib  hw5.tex  integration.eps  integration_0.15.eps  integration_0.3.eps
latex/hw6/: hw6.bib  hw6.tex
latex/hw7/: hw7.bib  hw7.tex
latex/hw8/: hw8.bib  hw8.tex
latex/hw9/: hw9.tex
